# mondocertificati.github.io

./: .env.example  .gitignore  README.md  config.py  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: weekly_newsletter.yml
analyzer/: __init__.py  screener.py
content/: __init__.py  generator.py  market_news.py
delivery/: __init__.py  beehiiv.py
docs/: index.html
scraper/: __init__.py  borsaitaliana.py  news_sources.py
storage/: db.py  schema.sql
tests/: test_content.py  test_database.py  test_delivery.py  test_models.py  test_scraper.py  test_screener.py
